[gd_scene load_steps=21 format=3 uid="uid://bdn5claftvmgn"]

[ext_resource type="Script" path="res://scenes/levels/main_hub/main_hub.gd" id="1_no8mj"]
[ext_resource type="PackedScene" uid="uid://d23s3ceqy66ry" path="res://scenes/levels/test/test_parallax.tscn" id="1_qc6y8"]
[ext_resource type="PackedScene" uid="uid://d27ao1gxureob" path="res://scenes/levels/blue_city/tilemaps/tilemap_mainhub.tscn" id="1_uc6qs"]
[ext_resource type="PackedScene" uid="uid://baksvorn8xwwc" path="res://scenes/levels/parallax_backgrounds/mountain_sky_tree.tscn" id="2_ggshg"]
[ext_resource type="Texture2D" uid="uid://cr1neufwt66rv" path="res://assets/sprite_tilesets/castle/signboard.png" id="5_b6f4k"]
[ext_resource type="PackedScene" uid="uid://cc327ml5lr825" path="res://scenes/levels/door/exit_door.tscn" id="5_yodbg"]
[ext_resource type="Texture2D" uid="uid://ug68u46641al" path="res://assets/sprite_characters/witch_spritesheet.png" id="7_uq1b8"]
[ext_resource type="Texture2D" uid="uid://dsdu11io064xj" path="res://assets/sprite_characters/rogue_spritesheet.png" id="8_knvnu"]
[ext_resource type="Texture2D" uid="uid://d0b5yrantkkqm" path="res://characters/rogue/visuals/rogue_arm.tres" id="9_qngvn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nuxn5"]
atlas = ExtResource("5_b6f4k")
region = Rect2(0, 32, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq1pv"]
atlas = ExtResource("7_uq1b8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42nkl"]
atlas = ExtResource("7_uq1b8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi761"]
atlas = ExtResource("7_uq1b8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rc2m"]
atlas = ExtResource("7_uq1b8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fwsbc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq1pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42nkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rc2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi761")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hr6qy"]
atlas = ExtResource("8_knvnu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b16p"]
atlas = ExtResource("8_knvnu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u4ak"]
atlas = ExtResource("8_knvnu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhk1n"]
atlas = ExtResource("8_knvnu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_25pov"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr6qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b16p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u4ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhk1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u4ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u4ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u4ak")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="MainHub" type="Node2D"]
script = ExtResource("1_no8mj")

[node name="test_parallax" parent="." instance=ExtResource("1_qc6y8")]

[node name="MountainSkyTree" parent="." instance=ExtResource("2_ggshg")]
visible = false

[node name="tilemap_mainhub" parent="." instance=ExtResource("1_uc6qs")]
layer_1/tile_data = PackedInt32Array(-2752501, 65539, 4, -2818037, 65539, 4, -2883573, 65539, 4, -2949109, 65539, 4, -3014645, 65539, 4, -3014646, 65539, 4, -3014647, 65539, 4, -3014648, 65539, 4, -3014649, 65539, 4, -3014650, 65539, 4, -3014651, 65539, 4, -3014652, 65539, 4, -3014653, 65539, 4, -3014654, 65539, 4, -3014655, 65539, 4, -2949119, 65539, 4, -2883583, 65539, 4, -2818047, 65539, 4, -2752511, 65539, 4, -2686975, 65539, 4, -2621439, 65539, 4, -2555903, 65539, 4, -2490367, 65539, 4, -2424831, 65539, 4, -2359295, 65539, 4, -2293759, 65539, 4, -2228223, 65539, 4, -2162687, 65539, 4, -2097151, 65539, 4, -2031615, 65539, 4, -1966079, 65539, 4, -1900543, 65539, 4, -1835007, 65539, 4, -1769471, 65539, 4, -1703935, 65539, 4, -1638399, 65539, 4, -1572863, 65539, 4, -1507327, 65539, 4, -1441791, 65539, 4, -1376255, 65539, 4, -1310719, 65539, 4, -1245183, 65539, 4, -1179647, 65539, 4, -1114111, 65539, 4, -1048575, 65539, 4, -983039, 65539, 4, -917503, 65539, 4, -851967, 65539, 4, -786431, 65539, 4, -720895, 65539, 4, -655359, 65539, 4, -589823, 65539, 4, -524287, 65539, 4, -458751, 65539, 4, -393215, 65539, 4, -327679, 65539, 4, -262143, 65539, 4, -196607, 65539, 4, -131071, 65539, 4, -131070, 65539, 4, -196606, 65539, 4, -262142, 65539, 4, -327678, 65539, 4, -393214, 65539, 4, -458750, 65539, 4, -524286, 65539, 4, -589822, 65539, 4, -655358, 65539, 4, -720894, 65539, 4, -786430, 65539, 4, -851966, 65539, 4, -917502, 65539, 4, -983038, 65539, 4, -1048574, 65539, 4, -1114110, 65539, 4, -1179646, 65539, 4, -1245182, 65539, 4, -1310718, 65539, 4, -1376254, 65539, 4, -1441790, 65539, 4, -1507326, 65539, 4, -1572862, 65539, 4, -1638398, 65539, 4, -1703934, 65539, 4, -1769470, 65539, 4, -1835006, 65539, 4, -1900542, 65539, 4, -1966078, 65539, 4, -2031614, 65539, 4, -2097150, 65539, 4, -2162686, 65539, 4, -2228222, 65539, 4, -2293758, 65539, 4, -2359294, 65539, 4, -2424830, 65539, 4, -2490366, 65539, 4, -2555902, 65539, 4, -2621438, 65539, 4, -2686974, 65539, 4, -2752510, 65539, 4, -2818046, 65539, 4, -2883582, 65539, 4, -2949118, 65539, 4, -2949117, 65539, 4, -2883581, 65539, 4, -2818045, 65539, 4, -2752509, 65539, 4, -2686973, 65539, 4, -2621437, 65539, 4, -2555901, 65539, 4, -2490365, 65539, 4, -2424829, 65539, 4, -2359293, 65539, 4, -2293757, 65539, 4, -2228221, 65539, 4, -2162685, 65539, 4, -2097149, 65539, 4, -2031613, 65539, 4, -1966077, 65539, 4, -1900541, 65539, 4, -1835005, 65539, 4, -1769469, 65539, 4, -1703933, 65539, 4, -1638397, 65539, 4, -1572861, 65539, 4, -1507325, 65539, 4, -1441789, 65539, 4, -1376253, 65539, 4, -1310717, 65539, 4, -1245181, 65539, 4, -1179645, 65539, 4, -1114109, 65539, 4, -1048573, 65539, 4, -983037, 65539, 4, -917501, 65539, 4, -851965, 65539, 4, -786429, 65539, 4, -720893, 65539, 4, -655357, 65539, 4, -589821, 65539, 4, -524285, 65539, 4, -458749, 65539, 4, -393213, 65539, 4, -327677, 65539, 4, -262141, 65539, 4, -196605, 65539, 4, -131069, 65539, 4, -131068, 65539, 4, -196604, 65539, 4, -262140, 65539, 4, -327676, 65539, 4, -393212, 65539, 4, -458748, 65539, 4, -524284, 65539, 4, -589820, 65539, 4, -655356, 65539, 4, -720892, 65539, 4, -786428, 65539, 4, -851964, 65539, 4, -917500, 65539, 4, -983036, 65539, 4, -1048572, 65539, 4, -1114108, 65539, 4, -1179644, 65539, 4, -1245180, 65539, 4, -1310716, 65539, 4, -1376252, 65539, 4, -1441788, 65539, 4, -1507324, 65539, 4, -1572860, 65539, 4, -1638396, 65539, 4, -1703932, 65539, 4, -1769468, 65539, 4, -1835004, 65539, 4, -1900540, 65539, 4, -1966076, 65539, 4, -2031612, 65539, 4, -2097148, 65539, 4, -2162684, 65539, 4, -2228220, 65539, 4, -2293756, 65539, 4, -2359292, 65539, 4, -2424828, 65539, 4, -2490364, 65539, 4, -2555900, 65539, 4, -2621436, 65539, 4, -2686972, 65539, 4, -2752508, 65539, 4, -2818044, 65539, 4, -2883580, 65539, 4, -2949116, 65539, 4, -2949115, 65539, 4, -2883579, 65539, 4, -2818043, 65539, 4, -2752507, 65539, 4, -2686971, 65539, 4, -2621435, 65539, 4, -2555899, 65539, 4, -2490363, 65539, 4, -2424827, 65539, 4, -2359291, 65539, 4, -2293755, 65539, 4, -2228219, 65539, 4, -2162683, 65539, 4, -2097147, 65539, 4, -2031611, 65539, 4, -1966075, 65539, 4, -1900539, 65539, 4, -1835003, 65539, 4, -1769467, 65539, 4, -1703931, 65539, 4, -1638395, 65539, 4, -1572859, 65539, 4, -1507323, 65539, 4, -1441787, 65539, 4, -1376251, 65539, 4, -1310715, 65539, 4, -1245179, 65539, 4, -1179643, 65539, 4, -1114107, 65539, 4, -1048571, 65539, 4, -983035, 65539, 4, -917499, 65539, 4, -851963, 65539, 4, -786427, 65539, 4, -720891, 65539, 4, -655355, 65539, 4, -589819, 65539, 4, -524283, 65539, 4, -458747, 65539, 4, -393211, 65539, 4, -327675, 65539, 4, -262139, 65539, 4, -196603, 65539, 4, -131067, 65539, 4, -131066, 65539, 4, -196602, 65539, 4, -262138, 65539, 4, -327674, 65539, 4, -393210, 65539, 4, -458746, 65539, 4, -524282, 65539, 4, -589818, 65539, 4, -655354, 65539, 4, -720890, 65539, 4, -786426, 65539, 4, -851962, 65539, 4, -917498, 65539, 4, -983034, 65539, 4, -1048570, 65539, 4, -1114106, 65539, 4, -1179642, 65539, 4, -1245178, 65539, 4, -1310714, 65539, 4, -1376250, 65539, 4, -1441786, 65539, 4, -1507322, 65539, 4, -1572858, 65539, 4, -1638394, 65539, 4, -1703930, 65539, 4, -1769466, 65539, 4, -1835002, 65539, 4, -1900538, 65539, 4, -1966074, 65539, 4, -2031610, 65539, 4, -2097146, 65539, 4, -2162682, 65539, 4, -2228218, 65539, 4, -2293754, 65539, 4, -2359290, 65539, 4, -2424826, 65539, 4, -2490362, 65539, 4, -2555898, 65539, 4, -2621434, 65539, 4, -2686970, 65539, 4, -2752506, 65539, 4, -2818042, 65539, 4, -2883578, 65539, 4, -2949114, 65539, 4, -2949113, 65539, 4, -2883577, 65539, 4, -2818041, 65539, 4, -2752505, 65539, 4, -2686969, 65539, 4, -2621433, 65539, 4, -2555897, 65539, 4, -2490361, 65539, 4, -2424825, 65539, 4, -2359289, 65539, 4, -2293753, 65539, 4, -2228217, 65539, 4, -2162681, 65539, 4, -2097145, 65539, 4, -2031609, 65539, 4, -1966073, 65539, 4, -1900537, 65539, 4, -1835001, 65539, 4, -1769465, 65539, 4, -1703929, 65539, 4, -1638393, 65539, 4, -1572857, 65539, 4, -1507321, 65539, 4, -1441785, 65539, 4, -1376249, 65539, 4, -1310713, 65539, 4, -1245177, 65539, 4, -1179641, 65539, 4, -1114105, 65539, 4, -1048569, 65539, 4, -983033, 65539, 4, -917497, 65539, 4, -851961, 65539, 4, -786425, 65539, 4, -720889, 65539, 4, -655353, 65539, 4, -589817, 65539, 4, -524281, 65539, 4, -458745, 65539, 4, -393209, 65539, 4, -327673, 65539, 4, -262137, 65539, 4, -196601, 65539, 4, -131065, 65539, 4, -131064, 65539, 4, -196600, 65539, 4, -262136, 65539, 4, -327672, 65539, 4, -393208, 65539, 4, -458744, 65539, 4, -524280, 65539, 4, -589816, 65539, 4, -655352, 65539, 4, -720888, 65539, 4, -786424, 65539, 4, -851960, 65539, 4, -917496, 65539, 4, -983032, 65539, 4, -1048568, 65539, 4, -1114104, 65539, 4, -1179640, 65539, 4, -1245176, 65539, 4, -1310712, 65539, 4, -1376248, 65539, 4, -1441784, 65539, 4, -1507320, 65539, 4, -1572856, 65539, 4, -1638392, 3, 5, -1703928, 65539, 4, -1769464, 65539, 4, -1835000, 3, 5, -1900536, 65539, 4, -1966072, 65539, 4, -2752504, 65539, 4, -2818040, 65539, 4, -2883576, 65539, 4, -2949112, 65539, 4, -2949111, 65539, 4, -2883575, 65539, 4, -2818039, 65539, 4, -2752503, 65539, 4, -1966071, 65539, 4, -1900535, 65539, 4, -1834999, 65539, 4, -1769463, 65539, 4, -1703927, 65539, 4, -1638391, 65539, 4, -1572855, 65539, 4, -1507319, 65539, 4, -1441783, 65539, 4, -1376247, 65539, 4, -1310711, 65539, 4, -1245175, 65539, 4, -524279, 65539, 4, -458743, 65539, 4, -393207, 65539, 4, -327671, 65539, 4, -262135, 65539, 4, -196599, 65539, 4, -131063, 65539, 4, -131062, 65539, 4, -196598, 65539, 4, -262134, 65539, 4, -327670, 65539, 4, -393206, 65539, 4, -458742, 65539, 4, -524278, 3, 5, -2752502, 65539, 4, -2818038, 65539, 4, -2883574, 65539, 4, -2949110, 65539, 4, -524277, 65539, 4, -458741, 65539, 4, -393205, 65539, 4, -327669, 65539, 4, -262133, 65539, 4, -196597, 65539, 4, -131061, 65539, 4, -131060, 65539, 4, -196596, 65539, 4, -262132, 65539, 4, -327668, 65539, 4, -393204, 65539, 4, -2752500, 65539, 4, -2818036, 65539, 4, -2883572, 65539, 4, -2949108, 65539, 4, -3014644, 65539, 4, -3014643, 65539, 4, -2949107, 65539, 4, -2883571, 65539, 4, -2818035, 65539, 4, -2752499, 65539, 4, -393203, 65539, 4, -327667, 65539, 4, -262131, 65539, 4, -196595, 65539, 4, -131059, 65539, 4, -131058, 65539, 4, -196594, 65539, 4, -262130, 65539, 4, -327666, 65539, 4, -393202, 65539, 4, -2752498, 65539, 4, -2818034, 65539, 4, -2883570, 65539, 4, -2949106, 65539, 4, -3014642, 65539, 4, -3014641, 65539, 4, -2949105, 65539, 4, -2883569, 65539, 4, -2818033, 65539, 4, -2752497, 3, 5, -393201, 65539, 4, -327665, 65539, 4, -262129, 65539, 4, -196593, 65539, 4, -131057, 65539, 4, -131056, 65539, 4, -196592, 65539, 4, -262128, 65539, 4, -327664, 65539, 4, -393200, 65539, 4, -2752496, 65539, 4, -2818032, 65539, 4, -2883568, 65539, 4, -2949104, 65539, 4, -3014640, 65539, 4, -3014639, 65539, 4, -2949103, 65539, 4, -2883567, 3, 5, -2818031, 65539, 4, -2752495, 65539, 4, -524271, 65539, 4, -458735, 65539, 4, -393199, 65539, 4, -327663, 65539, 4, -262127, 65539, 4, -196591, 65539, 4, -131055, 65539, 4, -131054, 65539, 4, -196590, 65539, 4, -262126, 65539, 4, -327662, 65539, 4, -393198, 65539, 4, -458734, 65539, 4, -524270, 65539, 4, -2883566, 65539, 4, -2949102, 65539, 4, -3014638, 65539, 4, -3014637, 65539, 4, -2949101, 65539, 4, -2883565, 65539, 4, -524269, 65539, 4, -458733, 65539, 4, -393197, 65539, 4, -327661, 65539, 4, -262125, 65539, 4, -196589, 65539, 4, -131053, 65539, 4, -131052, 65539, 4, -196588, 65539, 4, -262124, 65539, 4, -327660, 65539, 4, -393196, 65539, 4, -458732, 65539, 4, -524268, 65539, 4, -2883564, 65539, 4, -2949100, 65539, 4, -3014636, 65539, 4, -3014635, 65539, 4, -2949099, 65539, 4, -2883563, 65539, 4, -524267, 65539, 4, -458731, 65539, 4, -393195, 65539, 4, -327659, 65539, 4, -262123, 65539, 4, -196587, 65539, 4, -131051, 65539, 4, -131050, 65539, 4, -196586, 65539, 4, -262122, 65539, 4, -327658, 65539, 4, -393194, 65539, 4, -458730, 65539, 4, -524266, 65539, 4, -2883562, 65539, 4, -2949098, 65539, 4, -3014634, 65539, 4, -3014633, 65539, 4, -2949097, 65539, 4, -2883561, 65539, 4, -589801, 65539, 4, -524265, 65539, 4, -458729, 65539, 4, -393193, 65539, 4, -327657, 65539, 4, -262121, 65539, 4, -196585, 65539, 4, -131049, 65539, 4, -131048, 65539, 4, -196584, 65539, 4, -262120, 65539, 4, -327656, 65539, 4, -393192, 65539, 4, -458728, 65539, 4, -524264, 65539, 4, -589800, 65539, 4, -2883560, 65539, 4, -2949096, 65539, 4, -3014632, 65539, 4, -3014631, 65539, 4, -2949095, 65539, 4, -2883559, 65539, 4, -589799, 65539, 4, -524263, 65539, 4, -458727, 65539, 4, -393191, 65539, 4, -327655, 65539, 4, -262119, 65539, 4, -196583, 65539, 4, -131047, 65539, 4, -131046, 65539, 4, -196582, 65539, 4, -262118, 65539, 4, -327654, 65539, 4, -393190, 65539, 4, -458726, 65539, 4, -524262, 65539, 4, -589798, 65539, 4, -2883558, 65539, 4, -2949094, 65539, 4, -3014630, 65539, 4, -3014629, 65539, 4, -2949093, 65539, 4, -2883557, 65539, 4, -2818021, 65539, 4, -2752485, 65539, 4, -589797, 65539, 4, -524261, 65539, 4, -458725, 65539, 4, -393189, 65539, 4, -327653, 65539, 4, -262117, 65539, 4, -196581, 65539, 4, -131045, 65539, 4, -131044, 65539, 4, -196580, 65539, 4, -262116, 65539, 4, -327652, 65539, 4, -393188, 65539, 4, -458724, 65539, 4, -524260, 65539, 4, -589796, 65539, 4, -2752484, 65539, 4, -2818020, 65539, 4, -2883556, 65539, 4, -2949092, 65539, 4, -3014628, 65539, 4, -3014627, 65539, 4, -2949091, 65539, 4, -2883555, 65539, 4, -2818019, 65539, 4, -2752483, 65539, 4, -589795, 65539, 4, -524259, 65539, 4, -458723, 65539, 4, -393187, 65539, 4, -327651, 65539, 4, -262115, 65539, 4, -196579, 65539, 4, -131043, 65539, 4, -131042, 65539, 4, -196578, 65539, 4, -262114, 65539, 4, -327650, 65539, 4, -393186, 65539, 4, -458722, 65539, 4, -524258, 65539, 4, -589794, 65539, 4, -2752482, 65539, 4, -2818018, 65539, 4, -2883554, 65539, 4, -2949090, 65539, 4, -3014626, 65539, 4, -3014625, 65539, 4, -2949089, 65539, 4, -2883553, 65539, 4, -2818017, 65539, 4, -2752481, 65539, 4, -2686945, 65539, 4, -589793, 65539, 4, -524257, 65539, 4, -458721, 65539, 4, -393185, 65539, 4, -327649, 65539, 4, -262113, 65539, 4, -196577, 65539, 4, -131041, 65539, 4, -131040, 65539, 4, -196576, 65539, 4, -262112, 65539, 4, -327648, 65539, 4, -393184, 65539, 4, -458720, 65539, 4, -524256, 65539, 4, -589792, 65539, 4, -655328, 65539, 4, -2686944, 65539, 4, -2752480, 65539, 4, -2818016, 65539, 4, -2883552, 65539, 4, -2949088, 65539, 4, -3014624, 65539, 4, -3014623, 65539, 4, -2949087, 65539, 4, -2883551, 65539, 4, -2818015, 65539, 4, -2752479, 65539, 4, -2686943, 65539, 4, -655327, 65539, 4, -589791, 65539, 4, -524255, 65539, 4, -458719, 65539, 4, -393183, 65539, 4, -327647, 65539, 4, -262111, 65539, 4, -196575, 65539, 4, -131039, 65539, 4, -131038, 65539, 4, -196574, 65539, 4, -262110, 65539, 4, -327646, 65539, 4, -393182, 65539, 4, -458718, 65539, 4, -524254, 65539, 4, -589790, 65539, 4, -2686942, 65539, 4, -2752478, 65539, 4, -2818014, 65539, 4, -2883550, 65539, 4, -2949086, 65539, 4, -3014622, 65539, 4, -3014621, 65539, 4, -2949085, 65539, 4, -2883549, 65539, 4, -2818013, 65539, 4, -2752477, 65539, 4, -2686941, 65539, 4, -589789, 65539, 4, -524253, 65539, 4, -458717, 65539, 4, -393181, 65539, 4, -327645, 65539, 4, -262109, 65539, 4, -196573, 65539, 4, -131037, 65539, 4, -131036, 65539, 4, -196572, 65539, 4, -262108, 65539, 4, -327644, 65539, 4, -393180, 65539, 4, -458716, 65539, 4, -524252, 65539, 4, -589788, 65539, 4, -2686940, 65539, 4, -2752476, 3, 5, -2818012, 65539, 4, -2883548, 65539, 4, -2949084, 65539, 4, -3014620, 65539, 4, -3014619, 65539, 4, -2949083, 65539, 4, -2883547, 65539, 4, -2818011, 65539, 4, -2752475, 65539, 4, -2686939, 65539, 4, -589787, 65539, 4, -524251, 65539, 4, -458715, 65539, 4, -393179, 65539, 4, -327643, 65539, 4, -262107, 65539, 4, -196571, 65539, 4, -131035, 65539, 4, -131034, 65539, 4, -196570, 65539, 4, -262106, 65539, 4, -327642, 65539, 4, -393178, 65539, 4, -458714, 65539, 4, -2686938, 65539, 4, -2752474, 65539, 4, -2818010, 65539, 4, -2883546, 65539, 4, -2949082, 65539, 4, -3014618, 65539, 4, -3014617, 65539, 4, -2949081, 65539, 4, -2883545, 65539, 4, -2818009, 65539, 4, -2752473, 65539, 4, -2686937, 65539, 4, -458713, 65539, 4, -393177, 65539, 4, -327641, 65539, 4, -262105, 65539, 4, -196569, 65539, 4, -131033, 65539, 4, -131032, 65539, 4, -196568, 65539, 4, -262104, 65539, 4, -327640, 65539, 4, -393176, 65539, 4, -458712, 65539, 4, -2686936, 65539, 4, -2752472, 65539, 4, -2818008, 65539, 4, -2883544, 65539, 4, -2949080, 65539, 4, -3014616, 65539, 4, -3014615, 65539, 4, -2949079, 65539, 4, -2883543, 65539, 4, -2818007, 65539, 4, -2752471, 65539, 4, -2686935, 65539, 4, -458711, 65539, 4, -393175, 65539, 4, -327639, 65539, 4, -262103, 65539, 4, -196567, 65539, 4, -131031, 65539, 4, -131030, 65539, 4, -196566, 65539, 4, -262102, 65539, 4, -327638, 65539, 4, -393174, 65539, 4, -458710, 65539, 4, -2686934, 65539, 4, -2752470, 65539, 4, -2818006, 65539, 4, -2883542, 65539, 4, -2949078, 65539, 4, -3014614, 65539, 4, -3014613, 65539, 4, -2949077, 65539, 4, -2883541, 65539, 4, -2818005, 65539, 4, -2752469, 65539, 4, -2686933, 65539, 4, -458709, 65539, 4, -393173, 65539, 4, -327637, 65539, 4, -262101, 65539, 4, -196565, 65539, 4, -131029, 65539, 4, -131028, 65539, 4, -196564, 65539, 4, -262100, 65539, 4, -327636, 65539, 4, -393172, 65539, 4, -458708, 65539, 4, -524244, 65539, 4, -589780, 65539, 4, -2686932, 65539, 4, -2752468, 3, 5, -2818004, 65539, 4, -2883540, 65539, 4, -2949076, 65539, 4, -3014612, 65539, 4, -3014611, 65539, 4, -2949075, 65539, 4, -2883539, 65539, 4, -2818003, 65539, 4, -2752467, 65539, 4, -2686931, 65539, 4, -589779, 65539, 4, -524243, 65539, 4, -458707, 65539, 4, -393171, 65539, 4, -327635, 65539, 4, -262099, 65539, 4, -196563, 65539, 4, -131027, 65539, 4, -131026, 65539, 4, -196562, 65539, 4, -262098, 65539, 4, -327634, 65539, 4, -393170, 65539, 4, -458706, 65539, 4, -524242, 65539, 4, -589778, 65539, 4, -2686930, 65539, 4, -2752466, 65539, 4, -2818002, 65539, 4, -2883538, 65539, 4, -2949074, 65539, 4, -3014610, 65539, 4, -3014609, 65539, 4, -2949073, 65539, 4, -2883537, 65539, 4, -2818001, 65539, 4, -2752465, 65539, 4, -2686929, 65539, 4, -589777, 65539, 4, -524241, 65539, 4, -458705, 65539, 4, -393169, 65539, 4, -327633, 65539, 4, -262097, 65539, 4, -196561, 65539, 4, -131025, 65539, 4, -131024, 65539, 4, -196560, 65539, 4, -262096, 65539, 4, -327632, 65539, 4, -393168, 65539, 4, -458704, 65539, 4, -524240, 65539, 4, -589776, 65539, 4, -2686928, 65539, 4, -2752464, 65539, 4, -2818000, 65539, 4, -2883536, 65539, 4, -2949072, 65539, 4, -3014608, 65539, 4, -3014607, 65539, 4, -2949071, 65539, 4, -2883535, 65539, 4, -2817999, 65539, 4, -2752463, 65539, 4, -2686927, 65539, 4, -720847, 65539, 4, -655311, 65539, 4, -589775, 65539, 4, -524239, 65539, 4, -458703, 65539, 4, -393167, 65539, 4, -327631, 65539, 4, -262095, 65539, 4, -196559, 65539, 4, -131023, 65539, 4, -131022, 65539, 4, -196558, 65539, 4, -262094, 65539, 4, -327630, 65539, 4, -393166, 65539, 4, -458702, 65539, 4, -524238, 65539, 4, -589774, 65539, 4, -655310, 65539, 4, -720846, 65539, 4, -786382, 65539, 4, -2621390, 65539, 4, -2686926, 65539, 4, -2752462, 65539, 4, -2817998, 65539, 4, -2883534, 65539, 4, -2949070, 65539, 4, -3014606, 65539, 4, -3014605, 65539, 4, -2949069, 65539, 4, -2883533, 65539, 4, -2817997, 65539, 4, -2752461, 65539, 4, -2686925, 65539, 4, -2621389, 65539, 4, -786381, 65539, 4, -720845, 65539, 4, -655309, 65539, 4, -589773, 65539, 4, -524237, 65539, 4, -458701, 65539, 4, -393165, 65539, 4, -327629, 65539, 4, -262093, 65539, 4, -196557, 65539, 4, -131021, 65539, 4, -131020, 65539, 4, -196556, 65539, 4, -262092, 65539, 4, -327628, 65539, 4, -393164, 65539, 4, -458700, 65539, 4, -524236, 65539, 4, -589772, 65539, 4, -655308, 65539, 4, -720844, 65539, 4, -786380, 65539, 4, -851916, 65539, 4, -2621388, 65539, 4, -2686924, 65539, 4, -2752460, 65539, 4, -2817996, 65539, 4, -2883532, 65539, 4, -2949068, 65539, 4, -3014604, 65539, 4, -3014603, 65539, 4, -2949067, 65539, 4, -2883531, 65539, 4, -2817995, 65539, 4, -2752459, 65539, 4, -2686923, 65539, 4, -2621387, 65539, 4, -851915, 65539, 4, -786379, 65539, 4, -720843, 65539, 4, -655307, 65539, 4, -589771, 65539, 4, -524235, 65539, 4, -458699, 65539, 4, -393163, 65539, 4, -327627, 65539, 4, -262091, 65539, 4, -196555, 65539, 4, -131019, 65539, 4, -131018, 65539, 4, -196554, 65539, 4, -262090, 65539, 4, -327626, 65539, 4, -393162, 65539, 4, -458698, 65539, 4, -524234, 65539, 4, -589770, 65539, 4, -655306, 65539, 4, -720842, 65539, 4, -786378, 65539, 4, -851914, 65539, 4, -917450, 65539, 4, -982986, 65539, 4, -1048522, 65539, 4, -1114058, 65539, 4, -1179594, 65539, 4, -1245130, 65539, 4, -1310666, 65539, 4, -2621386, 65539, 4, -2686922, 65539, 4, -2752458, 65539, 4, -2817994, 65539, 4, -2883530, 65539, 4, -2949066, 65539, 4, -3014602, 65539, 4, -3014601, 65539, 4, -2949065, 65539, 4, -2883529, 65539, 4, -2817993, 65539, 4, -2752457, 65539, 4, -2686921, 65539, 4, -2621385, 65539, 4, -1310665, 65539, 4, -1245129, 65539, 4, -1179593, 65539, 4, -1114057, 65539, 4, -1048521, 65539, 4, -982985, 65539, 4, -917449, 65539, 4, -851913, 65539, 4, -786377, 65539, 4, -720841, 65539, 4, -655305, 65539, 4, -589769, 65539, 4, -524233, 65539, 4, -458697, 65539, 4, -393161, 65539, 4, -327625, 65539, 4, -262089, 65539, 4, -196553, 65539, 4, -131017, 65539, 4, -131016, 65539, 4, -196552, 65539, 4, -262088, 65539, 4, -327624, 65539, 4, -393160, 65539, 4, -458696, 65539, 4, -524232, 65539, 4, -589768, 65539, 4, -655304, 65539, 4, -720840, 65539, 4, -786376, 65539, 4, -851912, 65539, 4, -917448, 65539, 4, -982984, 65539, 4, -1048520, 65539, 4, -1114056, 65539, 4, -1179592, 65539, 4, -1245128, 65539, 4, -1310664, 65539, 4, -1376200, 65539, 4, -1441736, 65539, 4, -1507272, 65539, 4, -1572808, 65539, 4, -1638344, 65539, 4, -1703880, 65539, 4, -1769416, 65539, 4, -1834952, 65539, 4, -1900488, 65539, 4, -1966024, 65539, 4, -2031560, 65539, 4, -2097096, 65539, 4, -2162632, 65539, 4, -2228168, 65539, 4, -2293704, 65539, 4, -2359240, 65539, 4, -2424776, 65539, 4, -2490312, 65539, 4, -2555848, 65539, 4, -2621384, 65539, 4, -2686920, 65539, 4, -2752456, 65539, 4, -2817992, 65539, 4, -2883528, 65539, 4, -2949064, 65539, 4, -3014600, 65539, 4, -3014599, 65539, 4, -2949063, 65539, 4, -2883527, 65539, 4, -2817991, 65539, 4, -2752455, 65539, 4, -2686919, 65539, 4, -2621383, 65539, 4, -2555847, 65539, 4, -2490311, 65539, 4, -2424775, 65539, 4, -2359239, 65539, 4, -2293703, 65539, 4, -2228167, 65539, 4, -2162631, 65539, 4, -2097095, 65539, 4, -2031559, 65539, 4, -1966023, 65539, 4, -1900487, 65539, 4, -1834951, 65539, 4, -1769415, 65539, 4, -1703879, 65539, 4, -1638343, 65539, 4, -1572807, 65539, 4, -1507271, 65539, 4, -1441735, 65539, 4, -1376199, 65539, 4, -1310663, 65539, 4, -1245127, 65539, 4, -1179591, 65539, 4, -1114055, 65539, 4, -1048519, 65539, 4, -982983, 65539, 4, -917447, 65539, 4, -851911, 65539, 4, -786375, 65539, 4, -720839, 65539, 4, -655303, 65539, 4, -589767, 65539, 4, -524231, 65539, 4, -458695, 65539, 4, -393159, 65539, 4, -327623, 65539, 4, -262087, 65539, 4, -196551, 65539, 4, -131015, 65539, 4, -2555854, 65539, 4, -2490318, 65539, 4, -2424782, 65539, 4, -2555853, 65539, 4, -2490317, 65539, 4, -2424781, 65539, 4, -2555852, 65539, 4, -2490316, 65539, 4, -2424780, 65539, 4, -2555851, 65539, 4, -2490315, 65539, 4, -2424779, 65539, 4, -2359243, 65539, 4, -2293707, 65539, 4, -2228171, 65539, 4, -2162635, 65539, 4, -2097099, 65539, 4, -2031563, 65539, 4, -1966027, 65539, 4, -1900491, 65539, 4, -1834955, 65539, 4, -1769419, 65539, 4, -1703883, 65539, 4, -1638347, 65539, 4, -2555850, 65539, 4, -2490314, 65539, 4, -2424778, 65539, 4, -2359242, 65539, 4, -2293706, 65539, 4, -2228170, 65539, 4, -2162634, 65539, 4, -2097098, 65539, 4, -2031562, 65539, 4, -1966026, 65539, 4, -1900490, 65539, 4, -1834954, 65539, 4, -1769418, 65539, 4, -1703882, 65539, 4, -1638346, 65539, 4, -1572810, 65539, 4, -1507274, 65539, 4, -1441738, 65539, 4, -1376202, 65539, 4, -2555849, 65539, 4, -2490313, 65539, 4, -2424777, 65539, 4, -2359241, 65539, 4, -2293705, 65539, 4, -2228169, 65539, 4, -2162633, 65539, 4, -2097097, 65539, 4, -2031561, 65539, 4, -1966025, 65539, 4, -1900489, 65539, 4, -1834953, 65539, 4, -1769417, 65539, 4, -1703881, 65539, 4, -1638345, 65539, 4, -1572809, 65539, 4, -1507273, 65539, 4, -1441737, 65539, 4, -1376201, 65539, 4)

[node name="StartingPos" type="Marker2D" parent="."]
position = Vector2(502, -202)

[node name="ExitDoor" parent="." instance=ExtResource("5_yodbg")]
position = Vector2(360, -99)
starts_open = true
closed_text = "door closed?"
open_text = "Press E to begin game"

[node name="signboard" type="Sprite2D" parent="."]
position = Vector2(536, -112)
texture = SubResource("AtlasTexture_nuxn5")

[node name="Label" type="Label" parent="signboard"]
visible = false
offset_left = -79.0
offset_top = -60.0
offset_right = 90.0
offset_bottom = -37.0
text = "Press E to select level "

[node name="decor" type="Node2D" parent="."]

[node name="witch_idle" type="AnimatedSprite2D" parent="decor"]
position = Vector2(460, -93)
sprite_frames = SubResource("SpriteFrames_fwsbc")
autoplay = "default"
frame = 1
frame_progress = 0.410684

[node name="rogue_idle" type="AnimatedSprite2D" parent="decor"]
position = Vector2(595, -93)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_25pov")
autoplay = "default"

[node name="arm" type="Sprite2D" parent="decor/rogue_idle"]
position = Vector2(0, -1)
texture = ExtResource("9_qngvn")
